# alphafoldfetch

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: labels.yml
.github/workflows/: build.yml  ci.yml  documentation.yml  publish.yml  tests.yml
affetch/: __init__.py  __version__.py  _version.py  main.py
authors/: index.html
changelog/: index.html
contributing/: index.html
development/: index.html
docs/: development.md  index.md  installation.md  usage.md
docs/snippets/: links.txt
installation/: index.html
license/: index.html
notebooks/: template.ipynb
reference/affetch/: index.html
reference/affetch/main/: index.html
scripts/: gen_ref_nav.py
search/: search_index.json
snippets/: links.txt
src/alphafoldfetch/: __init__.py  skeleton.py
tests/: __init__.py  conftest.py  test_affetch.py  test_skeleton.py
usage/: index.html
