[build-system]
requires = ["uv_build>=0.11.0,<0.12"]
build-backend = "uv_build"

[project]
name = "AlphaFoldFetch"
version = "1.0.1"
description = "A tool for downloading AlphaFold structures using UniProt IDs or FASTA files"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["alphafold", "download", "get", "fetch", "fasta", "file"]
authors = [
    { name = "Edgar Manriquez-Sandoval", email = "mansanlab@gmail.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "aiohttp>=3.9,<4",
    "typer>=0.12,<1",
]

[project.scripts]
affetch = "affetch.main:app"

[project.urls]
Documentation = "https://github.com/mansanlab/alphafoldfetch"
Issues = "https://github.com/mansanlab/alphafoldfetch/issues"
Source = "https://github.com/mansanlab/alphafoldfetch"

[dependency-groups]
dev = [
    "pre-commit",
    { include-group = "lint" },
    { include-group = "test" },
]
lint = [
    "mypy==1.11.1",
    "ruff==0.5.7",
    "types-cachetools",
    "types-tabulate",
]
test = [
    "coverage[toml]>=6.2",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-vcr",
    "pytest-sugar",
]
docs = [
    "mkdocs~=1.6",
    "mkdocs-material[imaging]~=9.4",
    "mkdocs-include-markdown-plugin",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-minify-plugin~=0.8",
    "mkdocs-section-index",
    "mkdocs-git-revision-date-localized-plugin~=1.2",
    "mkdocstrings[python]",
    "mkdocs-redirects~=1.2",
    "mkdocs-glightbox~=0.4.0",
    "mike~=2.1",
    "pymdown-extensions~=10.9",
    "pygments~=2.18",
    "linkchecker~=10.4",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-name = "affetch"
module-root = ""
source-exclude = ["/.github"]

[tool.mypy]
files = ["affetch", "tests"]
disallow_untyped_defs = false
follow_imports = "normal" # "silent" for not following
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = false
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-glob='*.md'"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["affetch"]
omit = ["_version.py"]

[tool.coverage.paths]
source = ["affetch/", "*/site-packages/"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
indent-width = 4
src = ["affetch", "tests"]
include = ["affetch/*.py", "affetch/*.pyi", "tests/**/*.py", "tests/**/*.pyi"]

[tool.ruff.lint]
preview = true
extend-select = ["W292"]
select = [
    "A",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT", # Boolean trap
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "SIM",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
    "RUF100",
]
ignore = [
    "B027",
    "FBT003",
    "S105",
    "S106",
    "S107",
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    "PLC1901",
    "PLW2901",
    "SIM114",
    "E203",
    "ISC001",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
known-first-party = ["affetch"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["T201"]
"tests/**/*" = ["PLR2004", "S101", "TID252"]
